--- a/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
@@ -103,8 +103,9 @@
                         </form>
                     </div>
                     <div class="col-lg-4 col-md-4">
-                        <div class="card-body">
-                            <div class="profile-img-main rounded" id="profile-image">
+                        <div class="card-body d-flex justify-content-center align-items-center" style="height: 300px;">
+                            <div class="profile-img-main rounded-circle border border-secondary overflow-hidden" id="profile-image">
+                                <img src="@Model.Employee.ImageUrl" alt="" class="img-fluid rounded-circle" />
                             </div>
                         </div>
                     </div>
