--- a/MODAMSWeb/Areas/Admin/Views/Departments/EditDepartment.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/EditDepartment.cshtml
@@ -1,15 +1,19 @@
-﻿@model MODAMS.Models.ViewModels.Dto.DepartmentDTO
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model MODAMS.Models.ViewModels.Dto.DepartmentDTO
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
-        <h1 class="page-title">Edit Department</h1>
+        <h1 class="page-title">@Localizer["EditDepartment"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Departments" asp-action="Index">Department List</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Edit Department</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Departments" asp-action="Index">@Localizer["DepartmentList"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["EditDepartment"]</li>
         </ol>
     </div>
 </div>
@@ -19,7 +23,7 @@
     <div class="col-lg-12 col-md-12">
         <div class="card">
             <div class="card-header border-bottom">
-                <h4 class="mb-0">Department Details</h4>
+                <h4 class="mb-0">@Localizer["DepartmentDetails"]</h4>
             </div>
             <div class="card-body p-0">
                 <div class="row p-5 border-bottom">
@@ -40,10 +44,19 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="mb-3 form-group">
+                                            <label asp-for="department.NameSo"></label>
+                                            <input asp-for="department.NameSo" class="form-control" aria-required="true" placeholder="Department Name" />
+                                            <span asp-validation-for="department.NameSo" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="mb-3 form-group">
                                             <label asp-for="department.UpperLevelDeptId"></label>
                                             <select asp-for="department.UpperLevelDeptId" asp-items="@Model.Departments"
                                                     class="form-control select2 form-select">
-                                                <option disabled selected>-Select Department-</option>
+                                                <option disabled selected>-@Localizer["SelectDepartment"]-</option>
                                             </select>
                                             <span asp-validation-for="department.UpperLevelDeptId" class="text-danger"></span>
                                         </div>
@@ -70,8 +83,8 @@
                 </div>
                 <div class="row p-5">
                     <div class="btn-list">
-                        <button id="btnSubmit" class="btn btn-primary"><i class="fe fe-check-circle"></i> Save Department</button>
-                        <a asp-area="Admin" asp-controller="Departments" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                        <button id="btnSubmit" class="btn btn-info"><i class="fa fa-check-circle"></i> @Localizer["SaveDepartment"]</button>
+                        <a asp-area="Admin" asp-controller="Departments" asp-action="Index" class="btn btn-gray"><i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]</a>
                     </div>
                 </div>
             </div>
