--- a/MODAMSWeb/Areas/Admin/Views/Departments/OrganizationChart.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/OrganizationChart.cshtml
@@ -1,13 +1,17 @@
-﻿@model List<MODAMS.Models.ViewModels.Dto.OrganizationChartDTO>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model List<MODAMS.Models.ViewModels.Dto.OrganizationChartDTO>
 
 <div class="page-header">
     <div>
-        <h1 class="page-title">Departments</h1>
+        <h1 class="page-title">@Localizer["Departments"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Departments</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["Departments"]</li>
         </ol>
     </div>
     
@@ -19,7 +23,7 @@
         <div class="card">
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
-                    <h4 class="m-0">Department Structure</h4>
+                    <h4 class="m-0">@Localizer["OrganizationStructure"]</h4>
                     <div class="btn-list">
                         <a class="btn btn-primary" href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-diagram-3" viewBox="0 0 16 16">
@@ -39,34 +43,10 @@
             <div class="card-body project-list-table-container scroll" style="overflow-x: auto; overflow-y: auto;">
                 <div id="orgchart"></div>
                 @*<div id="dvChart" style="height:550px;" class="p-5"></div>*@
-                @*<div id="dvKendoChart">
-                <kendo-orgchart name="orgchart">
-                <orgchart-datasource type="DataSourceTagHelperType.Ajax">
-                <transport>
-                <read url="@Url.Action("Read","Departments")" />
-                </transport>
-                <schema>
-                <orgchart-model id="Id"
-                parent-id="ParentId"
-                expanded="true"
-                name="Name"
-                title="Title"
-                avatar="Avatar">
-                <fields>
-                <field name="ParentId" nullable="true"></field>
-                <field name="Id" type="number"></field>
-                <field name="Name" type="string"></field>
-                <field name="Title" type="string"></field>
-                <field name="Avatar" type="string"></field>
-                </fields>
-                </orgchart-model>
-                </schema>
-                </orgchart-datasource>
-                </kendo-orgchart>
-                </div>*@
+                
             </div>
             <div class="card-footer">
-                <a asp-area="Admin" asp-controller="Departments" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                <a asp-area="Admin" asp-controller="Departments" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
             </div>
         </div>
 
