--- a/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
@@ -113,19 +113,13 @@
                                                 @{
                                                     if (employee.IsActive)
                                                     {
-                                                        <a class="btn btn-sm btn-outline-secondary me-1" data-bs-toggle="dropdown" data-bs-original-title="@Localizer["LockEmployee"]">
-                                                            @*<svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 20">
-                                                                <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
-                                                            </svg>*@
+                                                        <a class="btn btn-sm btn-outline-secondary me-1" data-bs-toggle="dropdown" data-bs-original-title="@Localizer["LockAccount"]">
                                                             <i class="fe fe-lock"></i>
                                                         </a>
                                                     }
                                                     else
                                                     {
-                                                        <a class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="dropdown" data-bs-original-title="@Localizer["UnlockEmployee"]">
-                                                            @*<svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-unlock" viewBox="0 0 16 20">
-                                                                <path d="M11 1a2 2 0 0 0-2 2v4a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h5V3a3 3 0 0 1 6 0v4a.5.5 0 0 1-1 0V3a2 2 0 0 0-2-2zM3 8a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1H3z" />
-                                                            </svg>*@
+                                                        <a class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="dropdown" data-bs-original-title="@Localizer["UnlockAccount"]">
                                                             <i class="fe fe-unlock"></i>
                                                         </a>
                                                     }
