--- a/MODAMSWeb/Views/Shared/_Notification.cshtml
+++ b/MODAMSWeb/Views/Shared/_Notification.cshtml
@@ -34,6 +34,8 @@
 @{
     var errorMessage = TempData["error"] as string;
     var successMessage = TempData["success"] as string;
+
+    var isSomali = System.Globalization.CultureInfo.CurrentCulture.Name == "so";
 }
 
 @if (!string.IsNullOrEmpty(errorMessage))
@@ -42,7 +44,7 @@
         <div class="alert alert-danger alert-dismissible fade show p-0 mb-0" role="alert">
             <p class="py-3 px-5 mb-0 border-bottom border-bottom-danger-light">
                 <span class="alert-inner--icon me-2"><i class="fe fe-slash"></i></span>
-                <strong>Error Message</strong>
+                @(isSomali ? "Fariinta Khaladka" : "Error Message")
             </p>
             <p class="py-3 px-5">@errorMessage</p>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
@@ -58,7 +60,7 @@
         <div class="alert alert-success alert-dismissible fade show p-0 mb-4 notification-message" role="alert">
             <p class="py-3 px-5 mb-0 border-bottom border-bottom-success-light">
                 <span class="alert-inner--icon me-2"><i class="fe fe-thumbs-up"></i></span>
-                <strong>Success Message</strong>
+                <strong>@(isSomali ? "Fariinta Guusha" : "Success Message")</strong>
             </p>
             <p class="py-3 px-5">@successMessage</p>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
